--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <html lang="en">
 <head>
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="./app.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter</title>
 </head>
-<body>
+<body class="bg-slate-300 flex justify-center items-center min-w-80">
+    <div class="bg-slate-400 w-2/3 h-1/4 p-4 rounded-lg flex justify-around gap-4 flex-col items-center" id="counter">
+        <span class="rounded-lg border-2 w-12 text-center bg-sky-200">0</span>
+        <div id="button" class="flex gap-8">
+            <button class="rounded-lg border-2 w-20 text-center text-xl font-bold bg-pink-200 hover:bg-pink-400 transition-all duration-250 active:bg-pink-600">+</button>
+            <button class="rounded-lg border-2 w-20 text-center text-xl font-bold bg-pink-200 hover:bg-pink-400 transition-all duration-250 active:bg-pink-600">-</button>
+        </div>
+    </div>
 </body>
 </html>
